# whisper-sample

./: .env.sample  .gitignore  README.MD  audio_device_list.py  audio_stream.py  niji_voice.py  nijivoice_actor.json  pyproject.toml  requirements.txt
